name:                hblas
version:             0.0.0.0
-- synopsis:
-- github:              "https://bitbucket.org/mamtajakter/drpproject/src/reorganize/""
description:         Haskell Implementation of BLAS
license:             BSD3
license-file:        LICENSE
author:              Mamtaj Akter
maintainer:          makter2@cs.uoregon.edu
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  build-depends:       base,
                       vector,
                       ghc-prim,
                       containers,
                       time,
                       matrix,
                       parallel
  hs-source-dirs:      haskell
  Extensions:          CPP,
                       DeriveDataTypeable
  default-language:    Haskell2010
  ghc-options:         -O2
  exposed-modules:     HBLAS.Level1,
                       HBLAS.Level2,
                       HBLAS.IO.List,
                       HBLAS.IO.Vector,
                       HBLAS.Class

test-suite cgm01
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm01.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm02
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm02.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm03
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm03.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm04
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm04.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm05
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm05.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm06
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm06.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm07
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm07.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm08
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm08.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm09
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm09.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm10
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm10.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm11
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm11.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm12
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm12.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm13
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm13.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm14
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm14.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm15
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm15.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm16
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm16.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm17
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm17.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm18
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm18.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm19
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm19.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite cgm20
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testCGM/cgm20.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr01
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr01.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr02
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr02.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr03
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr03.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr04
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr04.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr05
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr05.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr06
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr06.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr07
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr07.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr08
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr08.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr09
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr09.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr10
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr10.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr11
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr11.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr12
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr12.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr13
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr13.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr14
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr14.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr15
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr15.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr16
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr16.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr17
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr17.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr18
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr18.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr19
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr19.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6

test-suite tfqmr20
   ghc-options:         -O2
                        -threaded
                        -eventlog
                        -rtsopts
   type:                exitcode-stdio-1.0
   default-language:    Haskell2010
   main-is:             testTFQMR/tfqmr20.hs
   build-depends:       base,
                        deepseq,
                        vector,
                        containers,
                        hblas,
                        time >= 1.6
